--- a/Azienda_Edile/Azienda_Edile.csproj
+++ b/Azienda_Edile/Azienda_Edile.csproj
@@ -611,13 +611,19 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Employee\CreateEmployee.cshtml" />
-    <Content Include="Views\Employee\Index.cshtml" />
     <Content Include="Style\Style.scss" />
     <Content Include="Style\_BootstrapOverrides.scss" />
     <Content Include="Views\Payments\Index.cshtml" />
+    <Content Include="Views\Payments\Create.cshtml" />
+    <Content Include="Views\Payments\Edit.cshtml" />
+    <Content Include="Views\Payments\Delete.cshtml" />
+    <Content Include="Views\Payments\Details.cshtml" />
+    <Content Include="Views\Employee\Index.cshtml" />
+    <Content Include="Views\Employee\EmployeePaymentHistory.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Default\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
